[workspace]
resolver = "3"
members = ["acyclic_output_fuzz"]
exclude = ["rolldown"]

[workspace.dependencies]
rolldown = { path = "rolldown/crates/rolldown" }
rolldown_common = { path = "rolldown/crates/rolldown_common" }
base64 = "0.22.1"
flate2 = "1.1.9"
oxc = "0.133.0"
proptest = "1.11.0"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt"] }
