[package]
name = "acyclic_output_fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[[bin]]
name = "generate_fixture"
path = "generate_fixture.rs"

[dependencies]
proptest = { workspace = true }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
tokio = { workspace = true }
base64 = "0.22.1"
flate2 = "1.1.2"
serde_json = "1.0.140"
