[package]
name = "acyclic_output_fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[[bin]]
name = "generate_fixture"
path = "generate_fixture.rs"

[dependencies]
proptest = { workspace = true }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
tokio = { workspace = true }
oxc = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
